--- a/examples/ex-statistics/CMakeLists.txt
+++ b/examples/ex-statistics/CMakeLists.txt
@@ -6,8 +6,8 @@ project(timemory-Statistics-Example LANGUAGES C CXX)
 # change the implementation of the components. Thus, this example cannot
 # link to the pre-compiled library w/ extern component templates
 set(timemory_FIND_COMPONENTS_INTERFACE timemory-statistics-example)
-set(COMPONENTS headers compile-options analysis-tools
-    OPTIONAL_COMPONENTS mpi settings manager hash)
+set(COMPONENTS headers compile-options analysis-tools 
+    OPTIONAL_COMPONENTS mpi settings manager hash cxx)
 
 option(USE_PAPI "Enable PAPI support" OFF)
 option(USE_CALIPER "Enable Caliper support" OFF)
