traits updates + pthread gotcha + docs + base cleanup
- renamed a few traits and added a few missing ones
- massive documentation updates
- wrote a pthread gotcha impl
- implements_storage -> uses_value_storage
- fixed storage mode type-traits

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "source/tests/external/nccl-tests"]
 	path = source/tests/external/nccl-tests
 	url = https://github.com/jrmadsen/nccl-tests.git
+[submodule "external/PTL"]
+	path = external/ptl
+	url = https://github.com/jrmadsen/PTL.git
