CMake fixes for PTL

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -38,7 +38,9 @@ endif()
 if(NOT PTL_DIR)
     set(PTL_DIR ${PROJECT_BINARY_DIR}/external/ptl)
 endif()
-find_package(PTL QUIET)
+if(TIMEMORY_USE_PTL OR TIMEMORY_BUILD_TESTING)
+    find_package(PTL QUIET)
+endif()
 
 # add_library(no-store-merge INTERFACE)
 # add_target_cxx_flag_if_avail(no-store-merge "-fno-store-merging")
