PTL submodule updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -214,6 +214,7 @@ jobs:
             - libmpich-dev
             - mpich
             - graphviz
+	    - libtbb-dev
       env:
         - CC=gcc-8
         - CXX=g++-8
