Removed MPI_{C,CXX}_COMPILER from timemory-config.cmake.in

--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -150,9 +150,9 @@ if(TIMEMORY_INSTALL_TREE)
         endif()
     endmacro()
 
-    set(MPI_C_COMPILER "@MPI_C_COMPILER@")
-    set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
-    set(MPIEXEC_EXECUTABLE "@MPIEXEC_EXECUTABLE@")
+    # set(MPI_C_COMPILER "@MPI_C_COMPILER@")
+    # set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
+    # set(MPIEXEC_EXECUTABLE "@MPIEXEC_EXECUTABLE@")
     set(caliper_DIR "@caliper_DIR@")
     set(gotcha_DIR "@gotcha_DIR@")
     set(OpenMP_DIR "@OpenMP_DIR@")
