extern + removed factory + force storage + core library
- cleaned up extern declarations
- removed factory and migrated to part of extern operations
- added support for force tree/flat/time
- created core library in lieu of utility + hash + environment + settings + plotting

--- a/source/timemory/backends/CMakeLists.txt
+++ b/source/timemory/backends/CMakeLists.txt
@@ -11,7 +11,7 @@ if(TIMEMORY_USE_MPI)
         FOLDER              components
         HEADERS             ${mpi_header_files}
         SOURCES             ${mpi_source_files}
-        DEPENDS             timemory-mpi timemory-mpi-init timemory-manager
+        DEPENDS             timemory-mpi timemory-mpi-init timemory-core
         PROPERTY_DEPENDS    GLOBAL COMPONENT USER_BUNDLE)
 
 endif()
