--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -32,16 +32,22 @@ set(@PROJECT_NAME@_INTERFACE_LIBRARIES @TIMEMORY_INTERFACE_LIBRARIES@)
 set(@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES @TIMEMORY_EMPTY_INTERFACE_LIBRARIES@)
 
 set(_EMPTY_BUT_REQUIRED_INTERFACES)
-set(_DEPRECATED_INTERFACES timemory-nvtx)
+set(_DEPRECATED_INTERFACES nvtx)
 foreach(_EMPTY_INTERFACE ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
     string(REPLACE "@PROJECT_NAME@-" "" _NAME "${_EMPTY_INTERFACE}")
-    if(_NAME IN_LIST _SKIP_INTERFACES)
+    if(_NAME IN_LIST _DEPRECATED_INTERFACES)
        list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_EMPTY_INTERFACE})
        list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_NAME})
        unset(@PROJECT_NAME@_FIND_REQUIRED_${_EMPTY_INTERFACE})
        unset(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
        continue()
     endif()
+    foreach(_DEPRECATED ${_DEPRECATED_INTERFACES})
+        if("${_EMPTY_INTERFACE}" MATCHES ".*${_DEPRECATED}.*")
+            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_EMPTY_INTERFACE})
+            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_NAME})
+        endif()
+    endforeach()
     if(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
         list(APPEND _EMPTY_BUT_REQUIRED_INTERFACES ${_NAME})
     endif()
