--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -42,15 +42,17 @@ foreach(_EMPTY_INTERFACE ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
        unset(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
        continue()
     endif()
-    foreach(_DEPRECATED ${_DEPRECATED_INTERFACES})
-        if("${_EMPTY_INTERFACE}" MATCHES ".*${_DEPRECATED}.*")
-            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_EMPTY_INTERFACE})
-            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_NAME})
-        endif()
-    endforeach()
     if(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
         list(APPEND _EMPTY_BUT_REQUIRED_INTERFACES ${_NAME})
     endif()
+endforeach()
+
+foreach(_COMP ${@PROJECT_NAME@_FIND_COMPONENTS})
+    foreach(_DEPRECATED ${_DEPRECATED_INTERFACES})
+        if("${_COMP}" MATCHES ".*${_DEPRECATED}.*")
+            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_COMP})
+        endif()
+    endforeach()
 endforeach()
 
 if(_EMPTY_BUT_REQUIRED_INTERFACES)
