--- a/examples/ex-gotcha/CMakeLists.txt
+++ b/examples/ex-gotcha/CMakeLists.txt
@@ -10,7 +10,8 @@ project(timemory-gotcha-Example LANGUAGES C CXX)
 include(GNUInstallDirs)
 
 set(timemory_FIND_COMPONENTS_INTERFACE timemory-gotcha-example)
-set(COMPONENTS compile-options vector gotcha analysis-tools OPTIONAL_COMPONENTS arch)
+set(COMPONENTS compile-options vector gotcha analysis-tools
+    OPTIONAL_COMPONENTS arch component)
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 add_library(ex_gotcha_lib SHARED ex_gotcha_lib.hpp ex_gotcha_lib.cpp)
