--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -17,17 +17,40 @@ configure_file(${PROJECT_SOURCE_DIR}/cmake/Templates/defines.h.in
 configure_file(${CMAKE_CURRENT_BINARY_DIR}/defines.h.in
     ${CMAKE_CURRENT_BINARY_DIR}/defines.h @ONLY)
 
-execute_process(
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        ${CMAKE_CURRENT_BINARY_DIR}/defines.h
-        ${CMAKE_CURRENT_LIST_DIR}/defines.h
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    ERROR_VARIABLE ERR_MSG
-    RESULT_VARIABLE RET
-)
+configure_file(${PROJECT_SOURCE_DIR}/cmake/Templates/version.h.in
+    ${CMAKE_CURRENT_BINARY_DIR}/version.h @ONLY)
 
-install(FILES ${CMAKE_CURRENT_LIST_DIR}/defines.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/timemory)
+if(timemory_MASTER_PROJECT)
+    install(
+        FILES
+            ${CMAKE_CURRENT_BINARY_DIR}/defines.h
+            ${CMAKE_CURRENT_BINARY_DIR}/version.h
+        DESTINATION
+            ${CMAKE_INSTALL_INCLUDEDIR}/timemory)
+else()
+    execute_process(
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${CMAKE_CURRENT_BINARY_DIR}/defines.h
+            ${CMAKE_CURRENT_LIST_DIR}/defines.h
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        ERROR_VARIABLE ERR_MSG
+        RESULT_VARIABLE RET
+    )
+    execute_process(
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${CMAKE_CURRENT_BINARY_DIR}/version.h
+            ${CMAKE_CURRENT_LIST_DIR}/version.h
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        ERROR_VARIABLE ERR_MSG
+        RESULT_VARIABLE RET
+    )
+    install(
+        FILES
+            ${CMAKE_CURRENT_LIST_DIR}/defines.h
+            ${CMAKE_CURRENT_LIST_DIR}/version.h
+        DESTINATION
+            ${CMAKE_INSTALL_INCLUDEDIR}/timemory)
+endif()
 
 file(GLOB_RECURSE header_files
     ${CMAKE_CURRENT_SOURCE_DIR}/utility/*.hpp
